# ComputerGraphics

./: 7.tar.xz  CMakeLists.txt  Drawline.cpp  Extra_functies (copy).cpp  Extra_functies.cpp  Extra_functies.h  Line2D.cpp  Line2D.h  Point2D.cpp  Point2D.h  README.md  Zbuffer.cpp  Zbuffer.h  color.cpp  color.h  draw.cpp  draw.h  drawzbuff.cpp  drawzbuff.h  drawzt.cpp  drawzt.h  easy_image.cc  easy_image.h  engine (copy).cc  engine.cc  face.cpp  face.h  figure.cpp  figure.h  oud.tar.xz  readME.odt  s0214054.tar.xz
ini/opdracht2/: filelist
ini/opdracht4/: filelist
ini/opdracht5/: filelist  z_buffered_wireframes011.ini
ini/opdracht6/: filelist
intro/: filelist
